aggiunto link nell'index alla tabella

--- a/index.html
+++ b/index.html
@@ -232,6 +232,8 @@
                 <dd>Palarescifina</dd>
             </div>
         </dl> 
+        
+        <a href="tabella.html">Tabella</a>
     </main>
    
     <footer><P>Valerio &amp; Occhinegro-<span lang="en">All rights reserved.</span></P></footer>
