--- a/componenti.html
+++ b/componenti.html
@@ -6,6 +6,8 @@
     <meta name="keywords" content="">
     <meta name="description" content="">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mini.css" media="screen and (max-width:600px)">
+    <link rel="stylesheet" href="print.css" media="print">
 </head>
 <body>
     <header>
