aggiunti link alla discografia

--- a/discografia.html
+++ b/discografia.html
@@ -32,22 +32,23 @@
         <h3>Clicca sulla copertina dell'album per scoprire la tracklist e tutti i dettagli.</h3>
 
         <dl id="album">
-            <dt lang="en">fakeNews</dt>
+            <dt lang="en">
+                <a href="https://www.youtube.com/playlist?list=PLnjFs2j2bC3HU7OU7puI4T4YloRu4lh5M">fakeNews</a></dt>
             <dd></dd>
 
-            <dt>AHIA</dt>
+            <dt><a href="https://www.youtube.com/watch?v=alMbWxhqKdg">AHIA</a></dt>
             <dd></dd>
 
-            <dt>Fuori dall'<span lang="en">hype</span> RINGO STARR</dt>
+            <dt><a href="https://www.lafeltrinelli.it/fuori-dall-hype-ringo-starr-cd-pinguini-tattici-nucleari/e/0194397334227">Fuori dall'<span lang="en">hype</span> RINGO STARR</a></dt>
             <dd></dd>
 
-            <dt>Fuori dall'<span lang="en">hype</span></dt>
+            <dt><a href="https://www.lafeltrinelli.it/fuori-dall-hype-cd-pinguini-tattici-nucleari/e/0190759392621"></a>Fuori dall'<span lang="en">hype</span></a></dt>
             <dd></dd>
 
-            <dt>Gioventù Brucata</dt>
+            <dt><a href="https://it.wikipedia.org/wiki/Giovent%C3%B9_brucata">Gioventù Brucata</a></dt>
             <dd></dd>
 
-            <dt>Diamo un calcio all'aldilà</dt>
+            <dt><a href="https://www.youtube.com/playlist?list=PLUKF4uhRaL-QkoFKhMElYSKkq539TSJwv">Diamo un calcio all'aldilà</a></dt>
             <dd></dd>
 
         </dl>
