--- a/biografia.html
+++ b/biografia.html
@@ -20,7 +20,7 @@
             <li lang="en"><a href="index.html">Home</a></li>
             <li>Biografia</li>
             <li><a href="componenti.html">Componenti</a></li>
-            <li><a href="discografia.html">Discografia</a></li>
+            <li><a href="discografiaTemplate.html">Discografia</a></li>
         </ul>
     </nav>
     
