--- a/componenti.html
+++ b/componenti.html
@@ -20,7 +20,7 @@
             <li lang="en"><a href="index.html">Home</a></li>
             <li><a href="biografia.html">Biografia</a></li>
             <li>Componenti</li>
-            <li><a href="discografia.html">Discografia</a></li>
+            <li><a href="discografiaTemplate.html">Discografia</a></li>
         </ul>
     </nav>
     
