--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <li lang="en">Home</li>
             <li><a href="biografia.html">Biografia</a></li>
             <li><a href="componenti.html">Componenti</a></li>
-            <li><a href="discografia.html">Discografia</a></li>
+            <li><a href="discografiaTemplate.html">Discografia</a></li>
         </ul>
     </nav>
     
