--- a/tabella.html
+++ b/tabella.html
@@ -23,7 +23,7 @@
         <li id="currentLink" lang="en"><a href="index.html">Home</a></li>
         <li><a href="biografia.html">Biografia</a></li>
         <li><a href="componenti.html">Componenti</a></li>
-        <li><a href="discografia.html">Discografia</a></li>
+        <li><a href="discografiaTemplate.html">Discografia</a></li>
     </ul>
 </nav>
 
