--- a/form.html
+++ b/form.html
@@ -33,7 +33,7 @@
     </nav>
 
     <main >
-        <form method="post" action="aggiungiTraccia.php" onsubmit="">
+        <form method="post" action="aggiungiTraccia.php" onsubmit="validazioneForm()">
             <fieldset>
                 <legend>Album</legend>
                 <label for="album">Seleziona l'album: </label>
